fixed scrollbar bg color

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ code {
 
 /* Track */
 *::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2.1px grey; 
+  background-color: rgb(227, 224, 224);
   border-radius: 2px;
 }
  
